--- a/index.html
+++ b/index.html
@@ -1,56 +1,134 @@
 <!DOCTYPE html>
+
+  
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>DewarpNet Demo!</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+  <title>Project</title>
+
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.5/cropper.css'>
   <link  href="css/style.css" rel="stylesheet" type="text/css"/>
   <link  href="dist/cropper.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+  <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
+  <link href="css/scrolling-nav.css" rel="stylesheet">
 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
 
-<body>
-  
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-sm-12 btn">
-            <p>
-              <input type="file" id="fileInput" accept="image/*" />
-              <input type="button" id="btnCrop" value="Crop" />
-              <input type="button" id="btnRestore" value="Restore" />
-              <input type="button" id="btnUnwarp" value="Unwarp!" onclick="unwarp_file()" />
-            </p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="top col-sm-6 ">
-          <canvas id="canvas">
-            Your browser does not support the HTML5 canvas element.
-          </canvas>
-      </div>
-      <div class="col-sm-6 top">
-          <div id="result"></div> 
-      </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-6 bot">
-            <div id="wcdiv"></div> 
-        </div>
-        <div class="col-sm-6 bot">
-          <div id="uwdiv"></div> 
-        </div>
-    </div>
-  </div>
+<body  id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
-  <!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.5/cropper.js'></script>
-  <script src="dist/jquery.js"></script><!-- jQuery is required -->
-  <script src="dist/cropper.js"></script><!-- Cropper.js is required -->
-  <script src="dist/jquery-cropper.js"></script>
-  <script src="js/script.js"></script>
+    <!-- Navigation -->
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand page-scroll" href="#">DewarpNet Demo</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse navbar-ex1-collapse">
+                <ul class="nav navbar-nav">
+                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+<!--                     <li class="hidden">
+                        <a class="page-scroll" href="page-top"></a>
+                    </li> -->
+                    <li>
+                        <a class="page-scroll" href="#contact">About</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+
+    <!-- Intro Section -->
+    <div class="outer-f">
+    <section id="intro" class="intro-section">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-sm-12 funcs">
+                <div class="col-sm-6">
+                  <input class="btn btnfile" type="file" id="fileInput" accept="image/*" />
+                </div>
+                <div class="col-sm-2">
+                  <input class="btn btn-default" type="button" id="btnCrop" value="Crop" />
+                </div>
+
+                <div class="col-sm-2">
+                  <input class="btn btn-default" type="button" id="btnRestore" value="Restore" />
+                </div>
+
+                <div class="col-sm-2">
+                  <input class="btn btn-default" type="button" id="btnUnwarp" value="Unwarp!" onclick="unwarp_file()" />
+                </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="top col-sm-6 ">
+              <canvas id="canvas">
+                Your browser does not support the HTML5 canvas element.
+              </canvas>
+          </div>
+          <div class="col-sm-6 top">
+              <div id="result"></div> 
+          </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6 bot">
+                <div id="wcdiv"></div> 
+            </div>
+            <div class="col-sm-6 bot">
+              <div id="uwdiv"></div> 
+            </div>
+        </div>
+      </div>
+    </section>
+</div>
+
+<div class="outer-e">
+    <!-- Contact Section -->
+    <section id="contact" class="contact-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1>Cite Our Work</h1>
+                    <p style="font-size: larger;"> If this project is useful to you, please consider citing our paper: <br>
+                        <p>
+                            <a style="font-size:15px;" href="https://www3.cs.stonybrook.edu/~cvl/projects/dewarpnet/"><b>DewarpNet: Single-Image Document Unwarping With Stacked 3D and 2D Regression Networks (ICCV '19')</b></a>
+                        </p>
+                    </p>
+                    </br>
+                    <h1>Contact</h1>
+                    <p style="font-size: larger; width:600px; position: relative; left: 50%; transform: translate(-50%, 0%);">If you have any questions about the project, please feel free to contact- </p>
+                        <p>Sagnik Das <a href="mailto:sadas@cs.stonybrook.edu">[email]</a></br>
+                        <p>Ke Ma <a href="mailto:kemma@cs.stonybrook.edu">[email]</a></br>
+
+                        </br>
+                        </br>
+                        </br>
+                            <a href="https://www3.cs.stonybrook.edu/~cvl/index.html">&copy; CVLab@StonyBrook</a>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
+  
+<script src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js'></script>
+<script src="js/scrolling-nav.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.5/cropper.js'></script>
+<script src="dist/jquery.js"></script><!-- jQuery is required -->
+<script src="dist/cropper.js"></script><!-- Cropper.js is required -->
+<script src="dist/jquery-cropper.js"></script>
+<script  src="js/script.js"></script>
+
 </body>
+
 </html>
