--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               <div id="result"></div> 
           </div>
         </div>
-        <div class="row">
+        <div class="row" style="margin-top:20px">
             <div class="col-sm-6 bot">
                 <div id="wcdiv"></div> 
             </div>
