--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
                     </p>
                     </br>
                     <h1>Contact</h1>
+                    <p style="font-size: larger; width:600px; position: relative; left: 50%; transform: translate(-50%, 0%);">Having issues with the demo or want to share fail cases? Open a tracker <a href="https://github.com/sagniklp/dewarpnet-demo/issues">here!</a></p></br>
                     <p style="font-size: larger; width:600px; position: relative; left: 50%; transform: translate(-50%, 0%);">If you have any questions about the project, please feel free to contact- </p>
                         <p>Sagnik Das <a href="mailto:sadas@cs.stonybrook.edu">[email]</a></br>
                         <p>Ke Ma <a href="mailto:kemma@cs.stonybrook.edu">[email]</a></br>
-
                         </br>
                         </br>
                         </br>
-                            <a href="https://www3.cs.stonybrook.edu/~cvl/index.html">&copy; CVLab@StonyBrook</a>
+                     <a href="https://www3.cs.stonybrook.edu/~cvl/index.html">&copy; CVLab@StonyBrook</a>
                 </div>
             </div>
         </div>
