--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Project</title>
+  <title>DewarpNet Demo</title>
 
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.5/cropper.css'>
   <link  href="css/style.css" rel="stylesheet" type="text/css"/>
@@ -26,22 +26,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#">DewarpNet Demo</a>
+                <a class="navbar-brand page-scroll" href="#" style="position: absolute; left: 2%;">DewarpNet Demo</a>
+                <a href="https://www3.cs.stonybrook.edu/~cvl/index.html"><img src="storage/cvlab.png" style="height:20px; position: absolute; margin-top: 16px; right: 2%;"></a></br>
             </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse navbar-ex1-collapse">
-                <ul class="nav navbar-nav">
-                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-<!--                     <li class="hidden">
-                        <a class="page-scroll" href="page-top"></a>
-                    </li> -->
-                    <li>
-                        <a class="page-scroll" href="#contact">About</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
     </nav>
@@ -111,6 +98,7 @@
                         </br>
                         </br>
                         </br>
+                     <img src="storage/logo.png"></br>
                      <a href="https://www3.cs.stonybrook.edu/~cvl/index.html">&copy; CVLab@StonyBrook</a>
                 </div>
             </div>
