--- a/index.html
+++ b/index.html
@@ -83,6 +83,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
+                    <h1>Few Tips</h1>
+                    <p style="font-size: larger;">  
+                      <b>Tight crop is important</b> to get good results. <br>
+                      Try to <b>keep the entire document</b> in the input image. <br>
+                      Unwarped image will have the same aspect ratio as input image, which may not be correct in all the cases.<br>
+                    </p>
+                    </br>
                     <h1>Cite Our Work</h1>
                     <p style="font-size: larger;"> If this project is useful to you, please consider citing our paper: <br>
                         <p>
